# Biubo-rust

./: .env.example  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  Dockerfile  README.md  ROADMAP.md  config.json  docker-compose.yml  index.html  package-lock.json  package.json
.github/workflows/: _build-release.yml  ci-lint.yml  deploy-pages.yml  docker-compose-test.yml  release-monthly.yml  release-nightly.yml  release-push.yml  release-stable.yml  release-weekly.yml
.trae/rules/: frontend-pages.md
debian/: postinst  postrm  prerm
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/dashboard/: DashboardTab.tsx  IpReputationTab.tsx  RuleBrowserTab.tsx  index.tsx
frontend/src/components/globe/: AttackTypeBars.tsx  CountryList.tsx  GlobeControls.tsx  GlobeTab.tsx  GlobeView.tsx  IPSearch.tsx  ThreatLevel.tsx  ThreatStats.tsx  TimeRangePicker.tsx  index.tsx
frontend/src/components/ipmanager/: BlacklistPanel.tsx  IPManagerTab.tsx  WhitelistPanel.tsx  index.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/plugins/: PluginConfigModal.tsx  PluginManager.tsx  index.tsx
frontend/src/components/settings/: BasicConfig.tsx  LLMConfig.tsx  ProxyManager.tsx  SettingsTab.tsx  index.tsx
frontend/src/components/system/: GaugeCard.tsx  SystemInfoList.tsx  SystemTab.tsx  WafStatusEditor.tsx  index.tsx
frontend/src/components/ui/: Badge.tsx  Card.tsx  Modal.tsx  (+5 more)
frontend/src/context/: AppContext.tsx  ToastContext.tsx
frontend/src/hooks/: useDashboard.ts  useDashboardData.ts  useGlobeData.ts  useIPManager.ts  useLogs.ts  useSettings.ts  useSystemStatus.ts
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/styles/: global.css
frontend/src/types/: index.ts
page/: index.html
page/assets/: index-BSpihPSr.js
plugins/: README.md
plugins/examples/: detection_rule_example.json  exporter_example.json
public/: CNAME
rpm/: biubo-waf.spec
scripts/: create-dmg.sh
src/: App.css  App.tsx  error.rs  index.css  main.rs
src/api/: app.rs  mod.rs
src/api/middleware/: api_key_auth.rs
src/api/routes/: cluster.rs  dashboard.rs  init.rs  internal.rs  mod.rs  plugins.rs  proxy.rs  waf_api.rs  waf_events.rs
src/cluster/: mod.rs  sync.rs  threat_share.rs
src/config/: mod.rs  settings.rs
src/core/: mod.rs  models.rs
src/core/behavior/: mod.rs  scoring.rs
src/core/engine/: async_detection_queue.rs  mod.rs  rules.rs  threat_signals.rs  waf_engine.rs
src/core/llm/: mod.rs  two_tier.rs
src/core/patching/: mod.rs
src/core/reputation/: aggregator.rs  manager.rs  mod.rs  providers.rs  tests.rs
src/core/rules/: mod.rs
src/core/security/: challenge.rs  mod.rs  rate_limit.rs
src/core/session/: manager.rs
src/data/: mod.rs
src/data/analytics/: aggregator.rs
src/data/storage/: base.rs  driver.rs  manager.rs  mod.rs  postgres_driver.rs  redis_driver.rs
src/plugins/: exporter_queue.rs  loader.rs  mod.rs  registry.rs  types.rs
src/services/: mod.rs
src/services/llm/: client.rs
src/services/proxy/: forwarder.rs
src/services/ssl/: manager.rs  mod.rs  tls_config.rs
src/utils/: compression.rs  crypto.rs  http_utils.rs  mod.rs  query_parser.rs  ua_parser.rs  url_validator.rs
systemd/: biubo-waf.service
wix/: main.wxs
