[package]
name = "biubo-waf"
version = "1.0.0-alpha"
edition = "2024"
description = "A Web Application Firewall that Thinks, Remembers, and Visualizes"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "compression-br", "compression-deflate"] }
tower = "0.5"

reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

regex = "1"
rmp-serde = "1"
dashmap = "6"

flate2 = "1"
brotli = "7"

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

nom = "7"
url = "2"
percent-encoding = "2"

sysinfo = "0.33"

once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
