[package]
name = "biubo-waf"
version = "1.0.0-alpha"
edition = "2021"
description = "A Web Application Firewall that Thinks, Remembers, and Visualizes"
license = "MIT"
authors = ["mc-yzy15 <yingmoliuguang@yeah.net>"]
homepage = "https://github.com/mc-yzy15/Biubo-rust"
repository = "https://github.com/mc-yzy15/Biubo-rust"
readme = "README.md"

[package.metadata.deb]
maintainer = "mc-yzy15 <yingmoliuguang@yeah.net>"
copyright = "2024, mc-yzy15 <yingmoliuguang@yeah.net>"
license-file = ["LICENSE", "0"]
depends = "systemd"
extended-description = """\
Biubo WAF is a Web Application Firewall that provides intelligent protection \
with AI-powered threat detection, session replay, and real-time visualization."""
section = "utility"
priority = "optional"
assets = [
    ["target/release/biubo-waf", "/usr/bin/biubo-waf", "755"],
    ["systemd/biubo-waf.service", "/lib/systemd/system/biubo-waf.service", "644"],
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "biubo-waf", enable = false, start = false }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/biubo-waf", dest = "/usr/bin/biubo-waf", mode = "0755" },
    { source = "systemd/biubo-waf.service", dest = "/usr/lib/systemd/system/biubo-waf.service", mode = "0644" },
]

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "compression-br", "compression-deflate"] }
tower = "0.5"

reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

regex = "1"
rmp-serde = "1"
dashmap = "6"

flate2 = "1"
brotli = "7"

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

nom = "7"
url = "2"
percent-encoding = "2"

sysinfo = "0.33"

once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
